# invoice-scraper

./: README.md
app/: docker-compose.yml  pyproject.toml
app/alembic/: alembic.ini
app/alembic/versions/: 661e2d11a167_create_grocerystore_table.py  989877ebe0b0_create_initial_tables.py
app/app/api/api_v1/: api.py
app/app/crud/: __init__.py  crud_category.py  crud_grocery_store.py  crud_invoice.py  crud_invoice_item.py  crud_invoice_items.py  crud_invoice_series.py  crud_item.py  crud_item_detail.py  crud_item_details.py  crud_register_invoice.py  crud_register_number.py  crud_type.py  crud_unit.py
app/app/crud/utils/: get_content.py  insert.py
app/app/db/: session.py
app/app/models/: __init__.py  category.py  grocery_store.py  invoice.py  invoice_item.py  invoice_items.py  invoice_series.py  item.py  item_category.py  item_detail.py  item_details.py  type.py  unit.py
app/app/schemas/: __init__.py  category.py  grocery_store.py  invoice.py  invoice_item.py  invoice_items.py  item.py  item_detail.py  item_details.py  register_number.py  type.py  url_list.py
app/app/scraper/: __init__.py  base.py  scraper_grocery_store.py  scraper_invoice.py  scraper_items.py
app/app/scrapper/: __init__.py  scrapper_grocery_store.py  scrapper_invoice.py
app/backend/: Dockerfile  alembic.ini
app/backend/alembic/versions/: 989877ebe0b0_create_initial_tables.py
app/backend/app/: main.py
app/backend/app/crud/: crud_category.py  crud_item_category.py  crud_register_number.py  crud_type_store.py
app/backend/app/db/: base_class.py
app/frontend/: .prettierrc
(+22 files in other folders)
